--- a/RF/Info.plist
+++ b/RF/Info.plist
@@ -36,5 +36,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>카메라 사진 찍기</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>앨범에서 사진 선택</string>
 </dict>
 </plist>
